package CA3;

public abstract class NhaDauTuObserver {
    public abstract void Update(float a);
}
